--- a/flask_app/.gitignore
+++ b/flask_app/.gitignore
@@ -1,2 +1,43 @@
-.venv
-__pycache__
+# Python cache files
+__pycache__/
+*.py[cod]
+
+# Virtual environment
+venv/
+env/
+ENV/
+.venv/
+
+# Flask instance folder
+instance/
+
+# Configuration files
+*.env
+
+# Database files
+*.sqlite3
+*.db
+
+# Migrations
+migrations/
+*.pyc
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+
+# Logs
+*.log
+
+# Coverage reports
+.coverage
+htmlcov/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Miscellaneous
+*.DS_Store
+*.egg-info/
+*.egg
