--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,7 +1,9 @@
+bcrypt
 Flask==2.2.3
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy==3.0.2
 Flask-Migrate==3.1.0
 Flask-WTF==1.0.0
-Flask-Bcrypt==0.7.1
+# Flask-Bcrypt==0.7.1
 python-dotenv==0.20.0
+Werkzeug>=2.2,<3.0
 WTForms==3.0.1
