--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,9 +1,10 @@
-bcrypt
 Flask==2.2.3
 Flask-SQLAlchemy==3.0.2
 Flask-Migrate==3.1.0
 Flask-WTF==1.0.0
-# Flask-Bcrypt==0.7.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.6.3
+Flask-SocketIO==5.4.1
 python-dotenv==0.20.0
 Werkzeug>=2.2,<3.0
 WTForms==3.0.1
