--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,3 +1,5 @@
+bcrypt==4.2.0
+click==8.1.7
 email_validator==2.2.0
 Flask==2.2.3
 Flask-SQLAlchemy==3.0.2
@@ -5,7 +7,13 @@ Flask-Migrate==3.1.0
 Flask-WTF==1.0.0
 Flask-Bcrypt==0.7.1
 Flask-Login==0.6.3
+Flask-Scss==0.5
 Flask-SocketIO==5.4.1
+libsass==0.23.0
+pycparser==2.22
+pyScss==1.3.7
 python-dotenv==0.20.0
+python-engineio==4.9.1
+python-socketio==5.11.4
 Werkzeug>=2.2,<3.0
 WTForms==3.0.1
