--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -2,6 +2,7 @@ bcrypt==4.2.0
 click==8.1.7
 email_validator==2.2.0
 Flask==2.2.3
+Flask-Assets==2.1.0
 Flask-SQLAlchemy==3.0.2
 Flask-Migrate==3.1.0
 Flask-WTF==1.0.0
