--- a/flask_app/app/package.json
+++ b/flask_app/app/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Willem van Heemstra",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "flowbite": "^2.5.2",
+    "tailwindcss": "^3.4.13"
+  }
 }
