--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -12,6 +12,7 @@ Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.0
 libsass==0.23.0
 pycparser==2.22
+pydbhub==0.0.4
 pyScss==1.3.7
 python-dotenv==0.20.0
 python-engineio==4.9.1
